@@ -2,22 +2,15 @@
 BigQuery connector
 ==================
 
+.. raw:: html
+
+  <img src="../_static/img/bigquery.png" class="connector-logo">
+
 The BigQuery connector allows querying the data stored in `BigQuery
 <https://cloud.google.com/bigquery/>`_. This can be used to join data between
 different systems like BigQuery and Hive. The connector uses the `BigQuery
 Storage API <https://cloud.google.com/bigquery/docs/reference/storage/>`_ to
 read the data from the tables.
-
-Beta disclaimer
----------------
-
-This connector is in Beta and is subject to change.
-
-Changes may include, but are not limited to:
-
-* Type conversion
-* Partitioning
-* Parameters
 
 BigQuery Storage API
 --------------------
@@ -33,14 +26,14 @@ that should generally lead to better read performance:
 
 **Column Filtering**
     The new API allows column filtering to only read the data you are interested in.
-    `Backed by a columnar datastore <https://cloud.google.com/blog/big-data/2016/04/inside-capacitor-bigquerys-next-generation-columnar-storage-format>`_,
+    `Backed by a columnar datastore <https://cloud.google.com/blog/products/bigquery/inside-capacitor-bigquerys-next-generation-columnar-storage-format>`_,
     it can efficiently stream data without reading all columns.
 
 **Dynamic Sharding**
     The API rebalances records between readers until they all complete. This means
     that all Map phases will finish nearly concurrently. See this blog article on
     `how dynamic sharding is similarly used in Google Cloud Dataflow
-    <https://cloud.google.com/blog/big-data/2016/05/no-shard-left-behind-dynamic-work-rebalancing-in-google-cloud-dataflow>`_.
+    <https://cloud.google.com/blog/products/gcp/no-shard-left-behind-dynamic-work-rebalancing-in-google-cloud-dataflow>`_.
 
 Requirements
 ------------
@@ -72,10 +65,9 @@ Configuration
 -------------
 
 To configure the BigQuery connector, create a catalog properties file in
-``etc/catalog`` named, for example, ``bigquery.properties``, to mount the
-BigQuery connector as the ``bigquery`` catalog. Create the file with the
-following contents, replacing the connection properties as appropriate for
-your setup:
+``etc/catalog`` named ``example.properties``, to mount the BigQuery connector as
+the ``example`` catalog. Create the file with the following contents, replacing
+the connection properties as appropriate for your setup:
 
 .. code-block:: text
 
@@ -101,6 +93,19 @@ read (before filtering). This should roughly correspond to the maximum number
 of readers supported by the BigQuery Storage API. This can be configured
 explicitly with the ``bigquery.parallelism`` property. BigQuery may limit the
 number of partitions based on server constraints.
+
+Arrow serialization support
+^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+This is an experimental feature which introduces support for using Apache Arrow
+as the serialization format when reading from BigQuery.  Please note there are
+a few caveats:
+
+* Using Apache Arrow serialization is disabled by default. In order to enable
+  it, set the ``bigquery.experimental.arrow-serialization.enabled``
+  configuration property to ``true`` and add
+  ``--add-opens=java.base/java.nio=ALL-UNNAMED`` to the Trino
+  :ref:`jvm_config`.
 
 Reading from views
 ^^^^^^^^^^^^^^^^^^
@@ -133,67 +138,231 @@ Property                                              Description               
 ``bigquery.views-enabled``                            Enables the connector to read from views and not only tables.  ``false``
                                                       Please read `this section <#reading-from-views>`_ before
                                                       enabling this feature.
+``bigquery.view-expire-duration``                     Expire duration for the materialized view.                     ``24h``
 ``bigquery.view-materialization-project``             The project where the materialized view is going to be created The view's project
 ``bigquery.view-materialization-dataset``             The dataset where the materialized view is going to be created The view's dataset
+``bigquery.skip-view-materialization``                Use REST API to access views instead of Storage API. BigQuery
+                                                      ``BIGNUMERIC`` and ``TIMESTAMP`` types are unsupported.        ``false``
 ``bigquery.views-cache-ttl``                          Duration for which the materialization of a view will be       ``15m``
                                                       cached and reused. Set to ``0ms`` to disable the cache.
+``bigquery.metadata.cache-ttl``                       Duration for which metadata retrieved from BigQuery            ``0ms``
+                                                      is cached and reused. Set to ``0ms`` to disable the cache.
 ``bigquery.max-read-rows-retries``                    The number of retries in case of retryable server issues       ``3``
 ``bigquery.credentials-key``                          The base64 encoded credentials key                             None. See the `requirements <#requirements>`_ section.
 ``bigquery.credentials-file``                         The path to the JSON credentials file                          None. See the `requirements <#requirements>`_ section.
 ``bigquery.case-insensitive-name-matching``           Match dataset and table names case-insensitively               ``false``
-``bigquery.case-insensitive-name-matching.cache-ttl`` Duration for which remote dataset and table names will be      ``1m``
-                                                      cached. Higher values reduce the number of API calls to
-                                                      BigQuery but can cause newly created dataset or tables to not
-                                                      be visible until the configured duration. Set to ``0ms`` to
-                                                      disable the cache.
+``bigquery.query-results-cache.enabled``              Enable `query results cache
+                                                      <https://cloud.google.com/bigquery/docs/cached-results>`_      ``false``
+``bigquery.experimental.arrow-serialization.enabled`` Enable using Apache Arrow serialization when reading data      ``false``
+                                                      from BigQuery.
+                                                      Please read this `section <#arrow-serialization-support>`_
+                                                      before enabling this feature.
 ===================================================== ============================================================== ======================================================
 
-Data types
-----------
+.. _bigquery-type-mapping:
 
-With a few exceptions, all BigQuery types are mapped directly to their Trino
-counterparts. Here are all the mappings:
+Type mapping
+------------
 
-============== =============================== =============================================================================================================
-BigQuery       Trino                           Notes
-============== =============================== =============================================================================================================
-``ARRAY``      ``ARRAY``
-``BOOLEAN``    ``BOOLEAN``
-``BYTES``      ``VARBINARY``
-``DATE``       ``DATE``
-``DATETIME``   ``TIMESTAMP(6)``
-``FLOAT``      ``DOUBLE``
-``GEOGRAPHY``  ``VARCHAR``                     In `Well-known text (WKT) <https://en.wikipedia.org/wiki/Well-known_text_representation_of_geometry>`_ format
-``INTEGER``    ``BIGINT``
-``NUMERIC``    ``DECIMAL(P,S)``                Defaults to ``38`` as precision and ``9`` as scale
-``BIGNUMERIC`` ``DECIMAL(P,S)``                Precision > 38 is not supported. Note that the default precision and scale of BIGNUMERIC is ``(77, 38)``.
-``RECORD``     ``ROW``
-``STRING``     ``VARCHAR``
-``TIME``       ``TIME(6)``
-``TIMESTAMP``  ``TIMESTAMP(6) WITH TIME ZONE`` Time zone is UTC
-============== =============================== =============================================================================================================
+Because Trino and BigQuery each support types that the other does not, this
+connector :ref:`modifies some types <type-mapping-overview>` when reading or
+writing data. Data types may not map the same way in both directions between
+Trino and the data source. Refer to the following sections for type mapping in
+each direction.
+
+BigQuery type to Trino type mapping
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+The connector maps BigQuery types to the corresponding Trino types according
+to the following table:
+
+.. list-table:: BigQuery type to Trino type mapping
+  :widths: 30, 30, 50
+  :header-rows: 1
+
+  * - BigQuery type
+    - Trino type
+    - Notes
+  * - ``BOOLEAN``
+    - ``BOOLEAN``
+    -
+  * - ``INT64``
+    - ``BIGINT``
+    - ``INT``, ``SMALLINT``, ``INTEGER``, ``BIGINT``, ``TINYINT``, and
+      ``BYTEINT`` are aliases for ``INT64`` in BigQuery.
+  * - ``FLOAT64``
+    - ``DOUBLE``
+    -
+  * - ``NUMERIC``
+    - ``DECIMAL(P,S)``
+    - The default precision and scale of ``NUMERIC`` is ``(38, 9)``.
+  * - ``BIGNUMERIC``
+    - ``DECIMAL(P,S)``
+    - Precision > 38 is not supported. The default precision and scale of
+      ``BIGNUMERIC`` is ``(77, 38)``.
+  * - ``DATE``
+    - ``DATE``
+    -
+  * - ``DATETIME``
+    - ``TIMESTAMP(6)``
+    -
+  * - ``STRING``
+    - ``VARCHAR``
+    -
+  * - ``BYTES``
+    - ``VARBINARY``
+    -
+  * - ``TIME``
+    - ``TIME(6)``
+    -
+  * - ``TIMESTAMP``
+    - ``TIMESTAMP(6) WITH TIME ZONE``
+    - Time zone is UTC
+  * - ``GEOGRAPHY``
+    - ``VARCHAR``
+    - In `Well-known text (WKT) <https://wikipedia.org/wiki/Well-known_text_representation_of_geometry>`_ format
+  * - ``ARRAY``
+    - ``ARRAY``
+    -
+  * - ``RECORD``
+    - ``ROW``
+    -
+
+No other types are supported.
+
+Trino type to BigQuery type mapping
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+The connector maps Trino types to the corresponding BigQuery types according
+to the following table:
+
+.. list-table:: Trino type to BigQuery type mapping
+  :widths: 30, 30, 50
+  :header-rows: 1
+
+  * - Trino type
+    - BigQuery type
+    - Notes
+  * - ``BOOLEAN``
+    - ``BOOLEAN``
+    -
+  * - ``VARBINARY``
+    - ``BYTES``
+    -
+  * - ``DATE``
+    - ``DATE``
+    -
+  * - ``DOUBLE``
+    - ``FLOAT``
+    -
+  * - ``BIGINT``
+    - ``INT64``
+    - ``INT``, ``SMALLINT``, ``INTEGER``, ``BIGINT``, ``TINYINT``, and
+      ``BYTEINT`` are aliases for ``INT64`` in BigQuery.
+  * - ``DECIMAL(P,S)``
+    - ``NUMERIC``
+    - The default precision and scale of ``NUMERIC`` is ``(38, 9)``.
+  * - ``VARCHAR``
+    - ``STRING``
+    -
+  * - ``TIMESTAMP(6)``
+    - ``DATETIME``
+    -
+
+No other types are supported.
 
 System tables
 -------------
 
-For each Trino table which maps to BigQuery view there exists a system table which exposes BigQuery view definition.
-Given a BigQuery view ``customer_view`` you can send query
-``SELECT * customer_view$view_definition`` to see the SQL which defines view in BigQuery.
+For each Trino table which maps to BigQuery view there exists a system table
+which exposes BigQuery view definition. Given a BigQuery view ``example_view``
+you can send query ``SELECT * example_view$view_definition`` to see the SQL
+which defines view in BigQuery.
+
+.. _bigquery_special_columns:
+
+Special columns
+---------------
+
+In addition to the defined columns, the BigQuery connector exposes
+partition information in a number of hidden columns:
+
+* ``$partition_date``: Equivalent to ``_PARTITIONDATE`` pseudo-column in BigQuery
+
+* ``$partition_time``: Equivalent to ``_PARTITIONTIME`` pseudo-column in BigQuery
+
+You can use these columns in your SQL statements like any other column. They
+can be selected directly, or used in conditional statements. For example, you
+can inspect the partition date and time for each record::
+
+    SELECT *, "$partition_date", "$partition_time"
+    FROM example.web.page_views;
+
+Retrieve all records stored in the partition ``_PARTITIONDATE = '2022-04-07'``::
+
+    SELECT *
+    FROM example.web.page_views
+    WHERE "$partition_date" = date '2022-04-07';
+
+.. note::
+
+  Two special partitions ``__NULL__`` and ``__UNPARTITIONED__`` are not supported.
 
 .. _bigquery-sql-support:
 
 SQL support
 -----------
 
-The connector provides read and write access to data and metadata in
-the BigQuery database. In addition to the :ref:`globally available
-<sql-globally-available>` and :ref:`read operation <sql-read-operations>`
-statements, the connector supports the following features:
+The connector provides read and write access to data and metadata in the
+BigQuery database. In addition to the
+:ref:`globally available <sql-globally-available>` and
+:ref:`read operation <sql-read-operations>` statements, the connector supports
+the following features:
 
+* :doc:`/sql/insert`
+* :doc:`/sql/truncate`
 * :doc:`/sql/create-table`
+* :doc:`/sql/create-table-as`
 * :doc:`/sql/drop-table`
 * :doc:`/sql/create-schema`
 * :doc:`/sql/drop-schema`
+* :doc:`/sql/comment`
+
+Table functions
+---------------
+
+The connector provides specific :doc:`table functions </functions/table>` to
+access BigQuery.
+
+.. _bigquery-query-function:
+
+``query(varchar) -> table``
+^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+The ``query`` function allows you to query the underlying BigQuery directly. It
+requires syntax native to BigQuery, because the full query is pushed down and
+processed by BigQuery. This can be useful for accessing native features which are
+not available in Trino or for improving query performance in situations where
+running a query natively may be faster.
+
+.. include:: polymorphic-table-function-ordering.fragment
+
+For example, query the ``example`` catalog and group and concatenate all
+employee IDs by manager ID::
+
+    SELECT
+      *
+    FROM
+      TABLE(
+        example.system.query(
+          query => 'SELECT
+            manager_id, STRING_AGG(employee_id)
+          FROM
+            company.employees
+          GROUP BY
+            manager_id'
+        )
+      );
 
 FAQ
 ---
