@@ -13,24 +13,29 @@
  */
 package io.trino.plugin.iceberg;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import io.trino.filesystem.TrinoFileSystem;
 import io.trino.plugin.hive.metastore.Table;
 import io.trino.plugin.hive.metastore.file.FileHiveMetastore;
 import io.trino.testing.AbstractTestQueryFramework;
 import io.trino.testing.DistributedQueryRunner;
+import io.trino.testing.MaterializedResult;
+import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.hive.metastore.TableType;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.Test;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.Map;
 import java.util.Optional;
 
 import static com.google.common.io.MoreFiles.deleteRecursively;
 import static com.google.common.io.RecursiveDeleteOption.ALLOW_INSECURE;
+import static io.trino.plugin.hive.HiveTestUtils.HDFS_FILE_SYSTEM_FACTORY;
+import static io.trino.plugin.hive.HiveTestUtils.SESSION;
 import static io.trino.plugin.hive.metastore.file.FileHiveMetastore.createTestingFileHiveMetastore;
-import static io.trino.plugin.iceberg.IcebergQueryRunner.createIcebergQueryRunner;
+import static io.trino.plugin.iceberg.DataFileRecord.toDataFileRecord;
 import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.testng.Assert.assertEquals;
@@ -51,11 +56,10 @@ public class TestIcebergTableWithCustomLocation
         metastoreDir = Files.createTempDirectory("test_iceberg").toFile();
         metastore = createTestingFileHiveMetastore(metastoreDir);
 
-        return createIcebergQueryRunner(
-                ImmutableMap.of(),
-                ImmutableMap.of("iceberg.unique-table-location", "true"),
-                ImmutableList.of(),
-                Optional.of(metastoreDir));
+        return IcebergQueryRunner.builder()
+                .setIcebergProperties(Map.of("iceberg.unique-table-location", "true"))
+                .setMetastoreDirectory(metastoreDir)
+                .build();
     }
 
     @AfterClass(alwaysRun = true)
@@ -70,22 +74,32 @@ public class TestIcebergTableWithCustomLocation
     {
         String tableName = "table_with_uuid";
         assertQuerySucceeds(format("CREATE TABLE %s as select 1 as val", tableName));
-        Optional<Table> table = metastore.getTable(null, "tpch", tableName);
-        assertTrue(table.isPresent(), "Table should exists");
+        Optional<Table> table = metastore.getTable("tpch", tableName);
+        assertThat(table).as("Table should exist").isPresent();
         String location = table.get().getStorage().getLocation();
         assertThat(location).matches(format(".*%s-[0-9a-f]{32}", tableName));
     }
 
     @Test
     public void testCreateAndDrop()
+            throws IOException
     {
         String tableName = "test_create_and_drop";
         assertQuerySucceeds(format("CREATE TABLE %s as select 1 as val", tableName));
-        Optional<Table> table = metastore.getTable(null, "tpch", tableName);
-        assertTrue(table.isPresent(), "Table should exist");
+        Table table = metastore.getTable("tpch", tableName).orElseThrow();
+        assertThat(table.getTableType()).isEqualTo(TableType.EXTERNAL_TABLE.name());
 
+        Path tableLocation = new Path(table.getStorage().getLocation());
+        TrinoFileSystem fileSystem = HDFS_FILE_SYSTEM_FACTORY.create(SESSION);
+        assertTrue(fileSystem.newInputFile(tableLocation.toString()).exists(), "The directory corresponding to the table storage location should exist");
+        MaterializedResult materializedResult = computeActual("SELECT * FROM \"test_create_and_drop$files\"");
+        assertEquals(materializedResult.getRowCount(), 1);
+        DataFileRecord dataFile = toDataFileRecord(materializedResult.getMaterializedRows().get(0));
+        assertTrue(fileSystem.newInputFile(new Path(dataFile.getFilePath()).toString()).exists(), "The data file should exist");
         assertQuerySucceeds(format("DROP TABLE %s", tableName));
-        assertFalse(metastore.getTable(null, "tpch", tableName).isPresent(), "Table should be dropped");
+        assertFalse(metastore.getTable("tpch", tableName).isPresent(), "Table should be dropped");
+        assertFalse(fileSystem.newInputFile(new Path(dataFile.getFilePath()).toString()).exists(), "The data file should have been removed");
+        assertFalse(fileSystem.newInputFile(tableLocation.toString()).exists(), "The directory corresponding to the dropped Iceberg table should not be removed because it may be shared with other tables");
     }
 
     @Test
@@ -94,19 +108,19 @@ public class TestIcebergTableWithCustomLocation
         String tableName = "test_create_rename_drop";
         String renamedName = "test_create_rename_drop_renamed";
         assertQuerySucceeds(format("CREATE TABLE %s as select 1 as val", tableName));
-        Optional<Table> table = metastore.getTable(null, "tpch", tableName);
-        assertTrue(table.isPresent(), "Table should exist");
+        Optional<Table> table = metastore.getTable("tpch", tableName);
+        assertThat(table).as("Table should exist").isPresent();
         String tableInitialLocation = table.get().getStorage().getLocation();
 
         assertQuerySucceeds(format("ALTER TABLE %s RENAME TO %s", tableName, renamedName));
-        Optional<Table> renamedTable = metastore.getTable(null, "tpch", renamedName);
-        assertTrue(renamedTable.isPresent(), "Table should exist");
+        Optional<Table> renamedTable = metastore.getTable("tpch", renamedName);
+        assertThat(renamedTable).as("Table should exist").isPresent();
         String renamedTableLocation = renamedTable.get().getStorage().getLocation();
         assertEquals(renamedTableLocation, tableInitialLocation, "Location should not be changed");
 
         assertQuerySucceeds(format("DROP TABLE %s", renamedName));
-        assertFalse(metastore.getTable(null, "tpch", tableName).isPresent(), "Initial table should not exists");
-        assertFalse(metastore.getTable(null, "tpch", renamedName).isPresent(), "Renamed table should be dropped");
+        assertThat(metastore.getTable("tpch", tableName)).as("Initial table should not exist").isEmpty();
+        assertThat(metastore.getTable("tpch", renamedName)).as("Renamed table should be dropped").isEmpty();
     }
 
     @Test
@@ -115,19 +129,19 @@ public class TestIcebergTableWithCustomLocation
         String tableName = "test_create_rename_create";
         String renamedName = "test_create_rename_create_renamed";
         assertQuerySucceeds(format("CREATE TABLE %s as select 1 as val", tableName));
-        Optional<Table> table = metastore.getTable(null, "tpch", tableName);
-        assertTrue(table.isPresent(), "Table should exist");
+        Optional<Table> table = metastore.getTable("tpch", tableName);
+        assertThat(table).as("Table should exist").isPresent();
         String tableInitialLocation = table.get().getStorage().getLocation();
 
         assertQuerySucceeds(format("ALTER TABLE %s RENAME TO %s", tableName, renamedName));
-        Optional<Table> renamedTable = metastore.getTable(null, "tpch", renamedName);
-        assertTrue(renamedTable.isPresent(), "Table should exist");
+        Optional<Table> renamedTable = metastore.getTable("tpch", renamedName);
+        assertThat(renamedTable).as("Table should exist").isPresent();
         String renamedTableLocation = renamedTable.get().getStorage().getLocation();
         assertEquals(renamedTableLocation, tableInitialLocation, "Location should not be changed");
 
         assertQuerySucceeds(format("CREATE TABLE %s as select 1 as val", tableName));
-        Optional<Table> recreatedTableWithInitialName = metastore.getTable(null, "tpch", tableName);
-        assertTrue(recreatedTableWithInitialName.isPresent(), "Table should exist");
+        Optional<Table> recreatedTableWithInitialName = metastore.getTable("tpch", tableName);
+        assertThat(recreatedTableWithInitialName).as("Table should exist").isPresent();
         String recreatedTableLocation = recreatedTableWithInitialName.get().getStorage().getLocation();
         assertNotEquals(tableInitialLocation, recreatedTableLocation, "Location should be different");
     }
